@@ -1,7 +1,16 @@
 package com.webdev.greenify.greenaction.service.impl;
 
+import com.nimbusds.jose.JOSEException;
+import com.nimbusds.jose.JWSAlgorithm;
+import com.nimbusds.jose.JWSHeader;
+import com.nimbusds.jose.JWSSigner;
+import com.nimbusds.jose.crypto.MACSigner;
+import com.nimbusds.jwt.JWTClaimsSet;
+import com.nimbusds.jwt.SignedJWT;
 import com.webdev.greenify.common.exception.AppException;
 import com.webdev.greenify.common.exception.ResourceNotFoundException;
+import com.webdev.greenify.common.exception.TokenException;
+import com.webdev.greenify.config.JwtProperties;
 import com.webdev.greenify.greenaction.dto.request.EventRegistrationRequestDTO;
 import com.webdev.greenify.greenaction.dto.response.EventRegistrationResponseDTO;
 import com.webdev.greenify.greenaction.entity.EventEntity;
@@ -21,7 +30,9 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
+import java.util.Date;
 import java.util.List;
 
 @Service
@@ -33,6 +44,7 @@ public class EventRegistrationServiceImpl implements EventRegistrationService {
     private final EventRepository eventRepository;
     private final UserRepository userRepository;
     private final EventRegistrationMapper registrationMapper;
+    private final JwtProperties jwtProperties;
 
     @Override
     @Transactional
@@ -42,12 +54,10 @@ public class EventRegistrationServiceImpl implements EventRegistrationService {
         EventEntity event = eventRepository.findById(request.getEventId())
                 .orElseThrow(() -> new ResourceNotFoundException("Event not found"));
 
-        // 1. Validate Event Status
         if (event.getStatus() != GreenEventStatus.PUBLISHED) {
             throw new AppException("Event is not open for registration", HttpStatus.BAD_REQUEST);
         }
 
-        // 2. Validate Sign Up Deadline
         if (event.getSignUpDeadlineHoursBefore() != null) {
             LocalDateTime deadline = event.getStartTime().minusHours(event.getSignUpDeadlineHoursBefore());
             if (LocalDateTime.now().isAfter(deadline)) {
@@ -55,34 +65,37 @@ public class EventRegistrationServiceImpl implements EventRegistrationService {
             }
         }
 
-        // 3. Check if user already registered (not cancelled)
         boolean alreadyRegistered = registrationRepository.existsByEventIdAndUserIdAndStatusNot(
                 event.getId(), currentUserId, RegistrationStatus.CANCELLED);
         if (alreadyRegistered) {
             throw new AppException("You are already registered or waitlisted for this event", HttpStatus.CONFLICT);
         }
 
-        // 4. Get Current User
         UserEntity user = userRepository.findById(currentUserId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-        // 5. Determine Status (Registered or Waitlisted)
         RegistrationStatus targetStatus = RegistrationStatus.REGISTERED;
+        long currentParticipants = 0;
         if (event.getMaxParticipants() != null) {
-            long currentParticipants = registrationRepository.countByEventIdAndStatus(event.getId(), RegistrationStatus.REGISTERED);
+            currentParticipants = registrationRepository.countByEventIdAndStatus(event.getId(), RegistrationStatus.REGISTERED);
             if (currentParticipants >= event.getMaxParticipants()) {
-                targetStatus = RegistrationStatus.WAITLISTED;
+                throw new AppException("Maximum number of participants reached", HttpStatus.BAD_REQUEST);
             }
         }
+
+        String registrationCode = event.getId() + "-" + user.getId() + "-" + System.currentTimeMillis();
+        String signedRegistrationCode = signRegistrationCode(registrationCode);
 
         EventRegistrationEntity registration = EventRegistrationEntity.builder()
                 .event(event)
                 .user(user)
                 .status(targetStatus)
                 .note(request.getNote())
+                .registrationCode(signedRegistrationCode)
                 .build();
 
         registration = registrationRepository.save(registration);
+        event.setParticipantCount(currentParticipants + 1);
         log.info("User {} registered for event {} with status {}", currentUserId, event.getId(), targetStatus);
 
         return registrationMapper.toResponse(registration);
@@ -102,7 +115,6 @@ public class EventRegistrationServiceImpl implements EventRegistrationService {
 
         EventEntity event = registration.getEvent();
 
-        // 1. Validate Cancellation Deadline
         if (event.getCancelDeadlineHoursBefore() != null) {
             LocalDateTime deadline = event.getStartTime().minusHours(event.getCancelDeadlineHoursBefore());
             if (LocalDateTime.now().isAfter(deadline)) {
@@ -113,25 +125,44 @@ public class EventRegistrationServiceImpl implements EventRegistrationService {
         RegistrationStatus oldStatus = registration.getStatus();
         registration.setStatus(RegistrationStatus.CANCELLED);
         registrationRepository.save(registration);
+        event.setParticipantCount(event.getParticipantCount() - 1);
         log.info("User {} cancelled registration for event {}", currentUserId, event.getId());
 
-        // 2. Auto-fill from Waitlist if a REGISTERED spot opened up
         if (oldStatus == RegistrationStatus.REGISTERED) {
-            promoteFromWaitlist(event.getId());
+            promoteFromWaitlist(event);
         }
     }
 
-    private void promoteFromWaitlist(String eventId) {
-        List<EventRegistrationEntity> waitlist = registrationRepository.findTopWaitlistedByEventId(eventId);
+    private void promoteFromWaitlist(EventEntity event) {
+        List<EventRegistrationEntity> waitlist = registrationRepository.findTopWaitlistedByEventId(event.getId());
         if (!waitlist.isEmpty()) {
-            EventRegistrationEntity firstOnWaitlist = waitlist.get(0);
+            EventRegistrationEntity firstOnWaitlist = waitlist.getFirst();
             firstOnWaitlist.setStatus(RegistrationStatus.REGISTERED);
             registrationRepository.save(firstOnWaitlist);
-            log.info("Promoted user {} from waitlist to registered for event {}", firstOnWaitlist.getUser().getId(), eventId);
+            event.setParticipantCount(event.getParticipantCount() + 1);
+            log.info("Promoted user {} from waitlist to registered for event {}", firstOnWaitlist.getUser().getId(), event.getId());
         }
     }
 
     private String getCurrentUserId() {
         return SecurityContextHolder.getContext().getAuthentication().getName();
+    }
+
+    private String signRegistrationCode(String registrationCode) {
+        try {
+            JWSSigner signer = new MACSigner(jwtProperties.getSecretKey().getBytes(StandardCharsets.UTF_8));
+
+            JWTClaimsSet claimsSet = new JWTClaimsSet.Builder()
+                    .subject(registrationCode)
+                    .issueTime(new Date())
+                    .build();
+
+            SignedJWT signedJWT = new SignedJWT(new JWSHeader(JWSAlgorithm.HS256), claimsSet);
+            signedJWT.sign(signer);
+
+            return signedJWT.serialize();
+        } catch (JOSEException e) {
+            throw new TokenException("Error signing registration code", e);
+        }
     }
 }
